# chatbot

./: .env  .gitignore  chatbot.py  main.py  pyproject.toml  requirements.txt
src/chatbot/: bot.py  main.py
