[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muzaffar Ali", email = "muzafark834@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.16",
]

[project.scripts]
chatbot = "chatbot.bot:main"
"scripts": {
    "start":"main.py"
    
}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
